[gd_scene load_steps=49 format=3 uid="uid://ba0qinwelvd2e"]

[ext_resource type="Texture2D" uid="uid://ctudpn815lt64" path="res://Assets/Characters/NPCs/NPCs/Farmer/Sprites/farmer_animations.png" id="1_aoiq8"]
[ext_resource type="Script" path="res://Assets/Characters/NPCs/NPCs/Farmer/Scripts/FarmerController.gd" id="2_x7srn"]
[ext_resource type="Script" path="res://Assets/Characters/NPCs/NPCs/Farmer/Scripts/NavigationManager.gd" id="3_akucb"]
[ext_resource type="Resource" uid="uid://cgr44qo5onkpk" path="res://Assets/Characters/NPCs/NPCs/Farmer/Schedules/farmer_test_schedule.tres" id="4_4u1vb"]
[ext_resource type="Script" path="res://Assets/Characters/NPCs/NPCs/Farmer/Scripts/AnimationManager.gd" id="5_5goup"]
[ext_resource type="Script" path="res://Assets/Characters/NPCs/NPCs/Farmer/Scripts/DestinationNavigator.gd" id="5_ccegu"]
[ext_resource type="Script" path="res://Assets/Characters/NPCs/NPCs/Farmer/Scripts/StateMachine.gd" id="6_kjmhp"]
[ext_resource type="Script" path="res://Assets/Characters/NPCs/Scripts/NPCSchedule.gd" id="10_2h0p1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fnl4b"]
size = Vector2(5, 1)

[sub_resource type="Animation" id="Animation_gx1p7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8efsj"]
resource_name = "farmer_forage_back"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [32, 33]
}

[sub_resource type="Animation" id="Animation_4gqo8"]
resource_name = "farmer_forage_front"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [30, 31]
}

[sub_resource type="Animation" id="Animation_jm5jo"]
resource_name = "farmer_forage_left"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [36, 37]
}

[sub_resource type="Animation" id="Animation_husra"]
resource_name = "farmer_forage_right"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [34, 35]
}

[sub_resource type="Animation" id="Animation_coxev"]
resource_name = "farmer_idle_back"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_hkfsh"]
resource_name = "farmer_idle_front"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_aqmdu"]
resource_name = "farmer_idle_left"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_1yk0h"]
resource_name = "farmer_idle_right"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_2syok"]
resource_name = "farmer_straw_back"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_54a20"]
resource_name = "farmer_straw_front"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_3tkv1"]
resource_name = "farmer_straw_left"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [6, 7]
}

[sub_resource type="Animation" id="Animation_ochq0"]
resource_name = "farmer_straw_right"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_g12qi"]
resource_name = "farmer_walk_back"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16, 17, 15]
}

[sub_resource type="Animation" id="Animation_jam1d"]
resource_name = "farmer_walk_front"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 10]
}

[sub_resource type="Animation" id="Animation_jxn23"]
resource_name = "farmer_walk_left"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_6kgwr"]
resource_name = "farmer_walk_right"
length = 0.9
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_st6lu"]
_data = {
"RESET": SubResource("Animation_gx1p7"),
"farmer_forage_back": SubResource("Animation_8efsj"),
"farmer_forage_front": SubResource("Animation_4gqo8"),
"farmer_forage_left": SubResource("Animation_jm5jo"),
"farmer_forage_right": SubResource("Animation_husra"),
"farmer_idle_back": SubResource("Animation_coxev"),
"farmer_idle_front": SubResource("Animation_hkfsh"),
"farmer_idle_left": SubResource("Animation_aqmdu"),
"farmer_idle_right": SubResource("Animation_1yk0h"),
"farmer_straw_back": SubResource("Animation_2syok"),
"farmer_straw_front": SubResource("Animation_54a20"),
"farmer_straw_left": SubResource("Animation_3tkv1"),
"farmer_straw_right": SubResource("Animation_ochq0"),
"farmer_walk_back": SubResource("Animation_g12qi"),
"farmer_walk_front": SubResource("Animation_jam1d"),
"farmer_walk_left": SubResource("Animation_jxn23"),
"farmer_walk_right": SubResource("Animation_6kgwr")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lmfie"]
animation = &"farmer_forage_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m652p"]
animation = &"farmer_forage_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pibsi"]
animation = &"farmer_forage_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lwlr2"]
animation = &"farmer_forage_back"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_olhlf"]
blend_point_0/node = SubResource("AnimationNodeAnimation_lmfie")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_m652p")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_pibsi")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_lwlr2")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_olpgu"]
animation = &"farmer_idle_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wwhwv"]
animation = &"farmer_idle_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l60wq"]
animation = &"farmer_idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_u2req"]
animation = &"farmer_idle_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_bc3nc"]
blend_point_0/node = SubResource("AnimationNodeAnimation_olpgu")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_wwhwv")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_l60wq")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_u2req")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qvrij"]
animation = &"farmer_straw_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n4hoo"]
animation = &"farmer_straw_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2oc6r"]
animation = &"farmer_straw_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tbs4e"]
animation = &"farmer_straw_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_njsjx"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qvrij")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_n4hoo")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_2oc6r")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_tbs4e")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hl6mc"]
animation = &"farmer_walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1bd3u"]
animation = &"farmer_walk_front"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_whbh3"]
animation = &"farmer_walk_back"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y83tm"]
animation = &"farmer_walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_t4040"]
blend_point_0/node = SubResource("AnimationNodeAnimation_hl6mc")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_1bd3u")
blend_point_1/pos = Vector2(0, 1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_whbh3")
blend_point_2/pos = Vector2(0, -1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_y83tm")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_epnwp"]
states/Forage/node = SubResource("AnimationNodeBlendSpace2D_olhlf")
states/Forage/position = Vector2(640, 100)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_bc3nc")
states/Idle/position = Vector2(310, 100)
states/Straw/node = SubResource("AnimationNodeBlendSpace2D_njsjx")
states/Straw/position = Vector2(411, 100)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_t4040")
states/Walk/position = Vector2(512, 100)

[node name="Farmer" type="CharacterBody2D" node_paths=PackedStringArray("navigation_agent")]
z_as_relative = false
y_sort_enabled = true
collision_layer = 4
collision_mask = 15
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("2_x7srn")
navigation_agent = NodePath("Navigation/NavigationAgent2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 2
z_as_relative = false
texture = ExtResource("1_aoiq8")
offset = Vector2(-0.5, -7.5)
hframes = 6
vframes = 7

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fnl4b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_st6lu")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_st6lu")
}
tree_root = SubResource("AnimationNodeStateMachine_epnwp")
anim_player = NodePath("../AnimationPlayer")
parameters/Forage/blend_position = Vector2(0, -0.0174603)
parameters/Idle/blend_position = Vector2(0.00205767, -0.015942)
parameters/Straw/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]

[node name="Timer" type="Timer" parent="Navigation"]
one_shot = true

[node name="Scripts" type="Node2D" parent="."]

[node name="NPCSchedule" type="Node2D" parent="Scripts"]
script = ExtResource("10_2h0p1")
npc_events = ExtResource("4_4u1vb")
npc_name = "Farmer"

[node name="NavigationManager" type="Node2D" parent="Scripts"]
script = ExtResource("3_akucb")

[node name="RandomNavigator" type="Node2D" parent="Scripts/NavigationManager"]

[node name="DestinationNavigator" type="Node2D" parent="Scripts/NavigationManager"]
script = ExtResource("5_ccegu")

[node name="AnimationManager" type="Node2D" parent="Scripts"]
script = ExtResource("5_5goup")

[node name="StateMachine" type="Node2D" parent="Scripts"]
script = ExtResource("6_kjmhp")

[connection signal="target_reached" from="Navigation/NavigationAgent2D" to="Scripts/NavigationManager/DestinationNavigator" method="_on_navigation_agent_2d_target_reached"]
[connection signal="timeout" from="Navigation/Timer" to="Scripts/NavigationManager/RandomNavigator" method="_on_timer_timeout"]
